--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,29 @@
 @import 'normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 html,
-body {
+body,
+ul {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Noto Serif', serif;
   margin: 0;
   padding: 0;
 }
