--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,14 @@
 }
 
 html,
-body,
-ul {
+body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   margin: 0;
   padding: 0;
+  min-width: 320px;
 }
 
 h1,
@@ -24,6 +24,7 @@ h4,
 h5,
 h6 {
   font-family: 'Noto Serif', serif;
+  font-style: normal;
   margin: 0;
   padding: 0;
 }
