--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
+  color: #3c3333;
   margin: 0;
   padding: 0;
   min-width: 320px;
@@ -26,6 +27,7 @@ h6 {
   font-family: 'Noto Serif', serif;
   font-style: normal;
   font-weight: 700;
+  color: #3c3333;
   margin: 0;
   padding: 0;
 }
